tests/NormalTests/paczka1/small_fuzzy/61298177.err
Error in line 6: lFG0SAebQg A981 24,9
Error in line 8: ZqZYewQ7a S160 42,5
Error in line 9: MmG S344 2,1
